--- a/CookPopularControl/Themes/BaseStyle/ControlsBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/ControlsBaseStyle.xaml
@@ -26,6 +26,12 @@
         </Setter>
     </Style>
 
+    <Style x:Key="ControlBaseStyle" TargetType="Control">
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
+        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
+    </Style>
+
     <Style x:Key="DefaultAttachedIconControlBaseStyle" TargetType="{x:Type Control}">
         <Setter Property="common:FrameworkElementBaseAttached.IconWidth" Value="15" />
         <Setter Property="common:FrameworkElementBaseAttached.IconHeight" Value="15" />
